# libaudio2-1.4.2a

./: BUILDNOTES  FAQ  HISTORY  Imakefile  README  README.CYGWIN  RELEASE  TODO  chg-version
clients/: Imakefile
clients/audio/: Imakefile
config/: Imakefile  NasConfig.h  NetAudio.def  NetAudio.tmpl  aclocal.m4  config.h.in  configure  configure.ac  filelist  makesrcpkg  mungeman
contrib/: README
contrib/esound/: esound-0.2.29-aix_NAS.patch
contrib/nasbugs/: Aproto.h  audio.h  nas_attacks.txt  nasbugs.c
contrib/rc/: nasd
contrib/xemacs/: nas.c
doc/: Imakefile  README  library.ps  mkpdf  overview.ps  protocol.txt  xcon94paper.ps  xcon94slide.ps
doc/html/: AuAnyEvent.3.html  AuBucketAttributes.3.html  AuCloseServer.3.html  AuConvertDataToShort.3.html  AuConvertShortToData.3.html  AuCreateBucket.3.html  AuCreateFlow.3.html  AuDataFormats.3.html  AuDataTypes.3.html  AuDefineToFormat.3.html  AuDestroyBucket.3.html  AuDestroyFlow.3.html  AuDeviceAttributes.3.html  AuDispatchEvent.3.html  AuElement.3.html  AuElementNotifyEvent.3.html  AuElementParameters.3.html  AuElementState.3.html  AuErrorEvent.3.html  AuEvent.3.html  AuEventsQueued.3.html  AuFileFormats.3.html  AuFixedPointFractionalAddend.3.html  AuFixedPointFromFraction.3.html  AuFixedPointFromSum.3.html  AuFixedPointIntegralAddend.3.html  AuFixedPointRoundDown.3.html  AuFixedPointRoundUp.3.html  AuFlush.3.html  AuFormatToDefine.3.html  AuFormatToString.3.html  AuFreeBucketAttributes.3.html  AuFreeDeviceAttributes.3.html  AuFreeElementStates.3.html  AuFreeElements.3.html  AuGetBucketAttributes.3.html  AuGetCloseDownMode.3.html  AuGetDeviceAttributes.3.html  AuGetElementParameters.3.html  AuGetElementStates.3.html  (+114 more)
doc/man/: Imakefile  nas.man
include/: Imakefile
include/audio/: Imakefile
lib/: Imakefile
lib/audio/: 8svx.c  Alibint.c  (+60 more)
server/: Imakefile  nasd.conf.eg  nasd.conf.man  nasd.man
(+253 files in other folders)
